# simple_snowflake_mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.secure  MISSING_FEATURES_PLAN.md  Makefile  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/simple_snowflake_mcp/: __init__.py  server.py
tests/: conftest.py  test_security.py  test_snowflake.py
